fixes and improments for use on mobile

--- a/web/css/thecommons-sidebar.css
+++ b/web/css/thecommons-sidebar.css
@@ -1,12 +1,28 @@
 .tc-topbar {
+    position: fixed;
+    top:0;
+    left: 0;
+    right: 0;
+    z-index: 1030;
     height: 60px;
     background-color: #231f20;
-    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .tc-sidebar-toggle {
-    font-size: 40px;
+    padding-top: 14px;
+    font-size: 26px;
     color: #d2ac2b;
+    /*color: #fff;*/
+}
+
+.tc-sidebar-toggle-icon {
+    /*
+    padding: 3px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 3px;
+    */
 }
 
 .tc-sidebar {
@@ -21,7 +37,7 @@
     background-color: #231f20;
     overflow-x: hidden;
 
-    width: 100px;
+    width: 260px; /* but hidden by default on mobile */
     -webkit-transition: width 0.2s ease;
     -ms-transition: width 0.2s ease;
     -moz-transition: width 0.2s ease;
@@ -29,22 +45,18 @@
     transition: width 0.2s ease;
 }
 
+.tc-sidebar-hidden {
+    width: 0;
+}
+
 /* bg gradient */
-.tc-sidebar {
+.tc-sidebar-DISABLED {
     background: -moz-linear-gradient(left, rgba(35, 31, 32, 1) 0%, rgba(35, 31, 32, 0.9) 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(35, 31, 32, 1)), color-stop(100%, rgba(35, 31, 32, 0.9))); /* Chrome,Safari4+ */
     background: -webkit-linear-gradient(left, rgba(35, 31, 32, 1) 0%, rgba(35, 31, 32, 0.9) 100%); /* Chrome10+,Safari5.1+ */
     background: -o-linear-gradient(left, rgba(35, 31, 32, 1) 0%, rgba(35, 31, 32, 0.9) 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(left, rgba(35, 31, 32, 1) 0%, rgba(35, 31, 32, 0.9) 100%); /* IE10+ */
     background: linear-gradient(to right, rgba(35, 31, 32, 1) 0%, rgba(35, 31, 32, 0.9) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#231f20', endColorstr='#e6231f20', GradientType=1); /* IE6-9 */
-}
-
-.tc-sidebar:hover,
-.tc-sidebar:focus,
-.tc-sidebar .nav > li {
-    width: 360px;
-    margin: 0;
 }
 
 /* all links */
@@ -64,13 +76,13 @@
     color: #514C4D;
 }
 .tc-sidebar .nav > li > a > .icon {
-    width: 100px;
-    font-size: 28px;
+    width: 80px;
+    font-size: 24px !important;
 }
 .tc-sidebar .nav > li > a > .text {
     font-family: 'futura-pt', sans-serif;
     font-weight: 700; /* heavy */
-    font-size: 20px;
+    font-size: 14px;
     text-transform: uppercase;
 }
 
@@ -108,18 +120,53 @@
 }
 
 .tc-sidebar .nav > li.brand > a > .icon {
-    font-size: 44px;
+    font-size: 34px !important;
 }
 
 .tc-sidebar .nav > li.brand > a > .text {
-    font-size: 16px;
+    font-size: 12px !important;
 }
-
 
 @media (min-width: 768px) {
 
+    .tc-topbar {
+        height: 0;
+    }
+
+    .tc-sidebar {
+        width: 100px !important;
+    }
+
+    .tc-sidebar-hidden {
+        width: 100px;
+    }
+
+    .tc-sidebar:hover,
+    .tc-sidebar:focus,
+    .tc-sidebar .nav > li {
+        width: 360px !important;
+        margin: 0;
+    }
+
+    .tc-sidebar .nav > li > a > .text {
+        font-size: 20px !important;
+    }
+
+    .tc-sidebar .nav > li > a > .icon {
+        width: 100px !important;
+        font-size: 28px !important;
+    }
+
     .tc-sidebar .nav-pills > li > a {
         border-radius: 0;
+    }
+
+    .tc-sidebar .nav > li.brand > a > .icon {
+        font-size: 44px !important;
+    }
+
+    .tc-sidebar .nav > li.brand > a > .text {
+        font-size: 16px !important;
     }
 
     .container-fluid {
